# soundsense-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  quickstart.yml  tests.yml
src/: app.rs  main.rs  message.rs  sound.rs  ui.rs
src/sound/: sound_channel.rs  sound_manager.rs
src/sound/sound_channel/: loop_player.rs  oneshot_player.rs
src/util/: event.rs  mod.rs
