[package]
name = "soundsense-rs"
version = "1.5.2"
authors = ["prixt <paraxite@naver.com>"]
edition = "2018"
description = "A Rusty SoundSense alternative"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = {version="1.3", default-features=false, features=["std", "perf"]}
rodio = "0.11.0"
quick-xml = "0.17"
rand = "0.7"
lazy_static = "1.4"
crossbeam = "0.7.3"
getopts = "0.2"
dirs = "2.0"
log = "0.4.8"
env_logger = "0.7.1"
tui = "0.9.5"
termion = "1.5.5"
num-derive = "0.3.1"
num-traits = "0.2.12"

[build-dependencies]
winres = "0.1"

[profile.dev.package.rodio]
debug-assertions = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
incremental = false
panic = "abort"

[profile.release.build-override]
opt-level = 0

[package.metadata.winres]
LegalCopyright = "© 2019-2020 prixt"
