[package]
name = "soundsense-rs"
version = "1.5.2"
authors = ["prixt <paraxite@naver.com>"]
edition = "2018"
description = "A Rusty SoundSense alternative"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.3.9", default-features = false, features = ["std", "perf"] }
rodio = "0.11.0"
quick-xml = "0.18.1"
rand = "0.7.3"
lazy_static = "1.4.0"
crossbeam = "0.7.3"
getopts = "0.2.21"
dirs = "3.0.1"
log = "0.4.11"
env_logger = "0.7.1"
tui = { version = "0.10.0", default-features = false, features = ['crossterm'] }
crossterm = "0.17.7"
num-derive = "0.3.1"
num-traits = "0.2.12"
serde = { version = "1.0.115", "optional" = true, features = ["derive"] }
argh = "0.1.3"

[build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
LegalCopyright = "© 2019-2020 prixt"
